# cmake-simple-template

./: .gitignore  CMakeLists.txt  Makefile  README.org  install-dependencies
src/: CMakeLists.txt  hello.c  hello.h  main.c  main.cpp
test/: CMakeLists.txt  test_hello.c
